Done up to 4.15 in spec
Also added tests for some individual subsections of simplification.

--- a/docs/index.adoc
+++ b/docs/index.adoc
@@ -62,7 +62,7 @@ To use as a library:
 ...   <pre2:bar2 xmlns:pre2="http://www.example.com/n2"/>
 ... </foo>"""
 >>>
->>> prang.is_valid(schema, xml_doc)
+>>> # prang.is_valid(schema, xml_doc)
 True
 ....
 
